# lokit

./: .gitignore  CMakeLists.txt  types.txt
src/: CMakeLists.txt  VSLibreOffice.cpp  VSLibreOffice.h  VSUtils.h  main.cpp
tests/: .~lock.test.odp#  .~lock.test.odt#  .~lock.test2.odp#
